--- a/src/main/webapp/WEB-INF/thymeleaf/admin/adminpage.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/admin/adminpage.html
@@ -1,15 +1,14 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring Boot Thymeleaf Hello World Example</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title th:text="'Title: ' + ${title}"></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <link rel="stylesheet" type="text/css"
-          href="webjars/bootstrap/3.3.7/css/bootstrap.min.css" />
+          href="../../webjars/bootstrap/3.3.7/css/bootstrap.min.css"/>
 
-    <link rel="stylesheet" th:href="@{/css/main.css}"
-          href="/css/main.css" />
-
+    <link rel="stylesheet" type="text/css" th:href="@{/css/main.css}"
+          href="../../css/main.css"/>
 </head>
 <body>
 
@@ -30,17 +29,27 @@
 <div class="container">
 
     <div class="starter-template">
-        <h1>Spring Boot Web Thymeleaf Example</h1>
+        <h1>Spring Boot Sample Web App</h1>
+
         <h2>
-            <span th:text="'Message: ' + ${message}"></span>
+            <span th:text="'Message: ' + ${message}"></span><br/>
+            <span th:text="'role: ' + ${role}"></span>
         </h2>
     </div>
 
 </div>
 <!-- /.container -->
-
+Click on the followings to visit other pages.<br/>
+<a href="/user/userpage">user</a><br/>
+<a href="/admin/adminpage">admin</a><br/>
+<a href="/public/homepage">Home</a><br/>
+<a href="/public/about">about</a><br/>
+<a href="/login">login</a><br/>
+<a href="/logout">logout</a><br/>
+<a href="/error/5xx">5xx</a><br/>
+<a href="/error/error">error</a><br/>
 <script type="text/javascript"
-        src="webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        src="../../webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </body>
 </html>
