--- a/src/main/webapp/WEB-INF/thymeleaf/public/about.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/public/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring Boot Thymeleaf Hello World Example</title>
+    <title th:text="'Title: ' + ${title}"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <link rel="stylesheet" type="text/css"
@@ -29,15 +29,25 @@
 <div class="container">
 
     <div class="starter-template">
-        <h1>Spring Boot Web Thymeleaf Example</h1>
+        <h1>Spring Boot Sample Web App</h1>
 
         <h2>
-            <span th:text="'Message: ' + ${message}"></span>
+            <span th:text="'Message: ' + ${message}"></span><br/>
+            <span th:text="'role: ' + ${role}"></span>
         </h2>
     </div>
 
 </div>
 <!-- /.container -->
+Click on the followings to visit other pages.<br/>
+<a href="/user/userpage">user</a><br/>
+<a href="/admin/adminpage">admin</a><br/>
+<a href="/public/homepage">Home</a><br/>
+<a href="/public/about">about</a><br/>
+<a href="/login">login</a><br/>
+<a href="/logout">logout</a><br/>
+<a href="/error/5xx">5xx</a><br/>
+<a href="/error/error">error</a><br/>
 <script type="text/javascript"
         src="../../webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
